--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ VITE_RECAPTCHA_SECRET_KEY=your_recaptcha_secret_key_here
 VITE_API_URL=https://your-api-url.com
 VITE_CONTACT_FORM_ENDPOINT=/api/contact
 
+# Unified Form Handler URL (full URL to your PHP handler)
+VITE_FORM_HANDLER_URL=https://yourdomain.com/handler.php
+
 # Google Maps (optional - for custom map functionality)
 VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
