--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.2.0",
+    "@fortawesome/free-brands-svg-icons": "^7.2.0",
+    "@fortawesome/react-fontawesome": "^3.2.0",
     "dompurify": "^3.3.1",
     "flatpickr": "^4.6.13",
     "react": "^19.2.0",
     "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.0",
     "react-google-recaptcha-v3": "^1.11.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.2",
     "react-router-dom": "^7.13.0",
     "react-slick": "^0.31.0",
@@ -32,6 +35,6 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "vite": "^7.3.1",
-    "vite-plugin-html": "^3.2.2"
+    "vite-plugin-html": "^0.0.1"
   }
 }
